# arbitrage-bot

./: .env.example  .gitignore  Cargo.toml  README.md  arbitrage.csv  project_structure.txt
src/: config.rs  constants.rs  logger.rs  main.rs
src/binance/: api.rs  auth.rs  binance_exchange.rs  binance_test.rs  mod.rs  order.rs  ws_handler.rs
src/models/: bybit_make_orders.rs  mod.rs  orderbook.rs
src/notifications/: alert_gate.rs  mod.rs  telegram.rs
src/ws/: binance_client.rs  binance_client_multiplex.rs  bybit_client_futures.rs  client.rs  exchanges.rs  mod.rs
