[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
