[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.41"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4"] }